salesforce-port/force-app/main/default/objects/Currency_Rate__c/Currency_Rate__c.object-meta.xml
<CustomObject>
    <label>Currency Rate</label>
    <nameField><displayFormat>CR-{000000}</displayFormat><label>Rate Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Currency Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>