salesforce-port/force-app/main/default/objects/Currency_Rate__c/fields/From_Currency__c.field-meta.xml
<CustomField>
    <fullName>From_Currency__c</fullName>
    <label>From Currency</label>
    <type>Text</type>
    <length>3</length>
    <required>true</required>
</CustomField>